// IMPORTANT: Every time you update this protobuf you must update these files:
//  * logfeller/configs/parsers/antirobot-narwhal.log.desc
//  * logfeller/configs/logs/proto_descriptor.json (under key "antirobot-narwhal-log-record", using
//    tools/generate_proto_descriptor)

syntax = "proto2";

package NDeviceValidatorProto;

option go_package = "a.yandex-team.ru/antirobot/device_validator/proto;device_validator_pb";

message TLogRow {
    optional TIosRequest ios_request = 1; // deprecated
    // The timestamp right before sending the log record to unified agent.
    optional uint64 timestamp = 2;
    optional TLogRecord record = 3;
}

message TLogRecord {
    // Only one of these is set for a single TLogRecord. Think of TLogRecord like a sum type.
    optional TIosRequest ios_request = 1;
    optional TAndroidNonceRequest android_nonce_request = 2;
    optional TAndroidAuthenticateRequest android_authenticate_request = 3;
}

message TIosRequest {
    optional uint64 timestamp = 1; // deprecated
    optional string ip = 2;
    optional bool valid_body = 3;
    optional string attestation = 4;
    optional string uuid = 5;
    optional uint64 user_timestamp = 6; // The timestamp from the user's request.
    optional uint64 request_timestamp = 7; // The timestamp of receiving the request.
    optional bool passed = 8;
    optional string device_check_error = 9;
    optional string response_error = 10;
    optional uint64 jwt_expiration_timestamp = 11;
    optional string transaction_id = 12;
    optional string transaction_id_error = 13;
    optional string app_id = 14;
}

message TAndroidNonceRequest {
    optional string ip = 1;
    optional bool valid_body = 2;
    optional string uuid = 3;
    optional string app_id = 4;
    optional uint64 request_timestamp = 5;
}

message TAndroidAuthenticateRequest {
    optional string ip = 1;
    optional bool valid_body = 2;
    optional string attestation = 3;
    optional string uuid = 4;
    optional string app_id = 5;
    optional uint64 request_timestamp = 6;
    optional bool passed = 7;
    optional string safetynet_error = 8;
    optional string claim_error = 9;
    optional uint64 jwt_expiration_timestamp = 10;
    optional string apk_certificate_digest_sha256 = 11;
    optional bool cts_profile_match = 12;
    optional bool basic_integrity = 13;
    optional uint64 safetynet_timestamp = 14;
    optional string response_error = 15;
}
